fix scrollbar for pre

--- a/assets/style.css
+++ b/assets/style.css
@@ -91,3 +91,9 @@ ul.this-repo:not(li) {
     box-shadow: inset 0 0 6px rgb(218, 149, 45);
     border-radius: 8px;
 }
+.highlight pre{
+    margin-bottom: 10px;
+}
+pre::-webkit-scrollbar-track{
+    background-color: #191919;
+}
